# EmergencySimulator

./: .gitignore
algorithm/: .dockerignore  .env.template  Dockerfile  README.md  alembic.ini  api_service.py  config.py  dal.py  docker-compose.yaml  exceptions.py  main.py  models.py  pyproject.toml  requirements.txt  test.py  utils.py
algorithm/database/: env.py
algorithm/database/versions/: d8304f547526_rescue_utility.py  d8304f547526_rescue_utility_v3.py  e19d5fb2938b_locations_v2.py
ui/ui/: README.md  index.html  package-lock.json  package.json
ui/ui/src/: App.jsx
