[project]
name = "algorithm"
version = "0.1.0"
description = "Algorithm side of the hackathon project"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pathlib = "^1.0.1"
pydantic-settings = "^2.8.1"
pydantic = "^2.11.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
